@@ -15,10 +15,7 @@ import entities.BBox;
 import org.bson.Document;
 
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -28,61 +25,181 @@ public class MongoHandler {
     public AppfileConfig appfileConfig;
 
     public MongoHandler() {
-        appfileConfig = SpringContext.context.getBean("appfileConfig",AppfileConfig.class);
+        appfileConfig = SpringContext.context.getBean("appfileConfig", AppfileConfig.class);
         initMongoClient();
     }
 
-    public void initMongoClient(){
+    /**
+     * Create Mongo client
+     */
+    public void initMongoClient() {
         MongoCredential credential = MongoCredential.createCredential(appfileConfig.mongUser, "admin", appfileConfig.mongoPass.toCharArray());
         mongoClient = new MongoClient(new ServerAddress(appfileConfig.mongoAddress, appfileConfig.mongoPort), Arrays.asList(credential));
         database = mongoClient.getDatabase(appfileConfig.mongoDatabase);
     }
 
 
-
-    public List<Box> findBoxes(String deviceId, Date start, Date end){
-        MongoCollection collection = database.getCollection(appfileConfig.mongoCollection);
+    /**
+     * Find the list of box with camID and time internal
+     * @param deviceId
+     * @param start
+     * @param end
+     * @return
+     */
+    public List<Box> findBoxes(String deviceId, long start, long end) {
+        MongoCollection collection = database.getCollection(appfileConfig.boxCollection);
         List<Box> boxes = new ArrayList<>();
         //find match value
         FindIterable<Document> findIterable = collection.find(Filters.and(
-                Filters.eq("DeviceID", deviceId),
+                Filters.eq("camId", deviceId),
                 Filters.gte("time", start),
                 Filters.lte("time", end)
         ));
         MongoCursor<Document> cursor = findIterable.iterator();
         //convert all find Document to BBox
 
-        while (cursor.hasNext()){
+        while (cursor.hasNext()) {
             Document document = cursor.next();
-            List<Document> bboxes = (List<Document>) document.get("points");
-            boxes.addAll(bboxes.stream().map(convertDocumentToBox()).collect(Collectors.toList()));
+
+            List<List> bboxes = (List<List>) document.get("boxes");
+
+
+            boxes.addAll(bboxes.stream().map(document1 -> ListToBox(document1)).toList());
+
         }
-        System.out.println(boxes.size());
+//        System.out.println(boxes.size());
 
         return boxes;
     }
 
+    /**
+     * Find the background of camID in the time internal
+     * @param deviceId
+     * @param start
+     * @param end
+     * @return
+     */
+    public String[] findBackgroundPath(String deviceId, long start, long end) {
+        try {
+            //get Collecttion
+            MongoCollection collection = database.getCollection(appfileConfig.backgroundCollection);
+            //query and sort
+            FindIterable<Document> findIterable = collection.find(Filters.and(
+                    Filters.eq("camId", deviceId),
+                    Filters.gte("time", start),
+                    Filters.lte("time", end)
+            )).sort(new BasicDBObject("time", 1));
 
-    private Function<Document, Box> convertDocumentToBox(){
-        return document -> {
-            if (!document.containsKey("x")){
-                return null;
+            //convert to list String[]
+            MongoCursor<Document> cursor = findIterable.iterator();
+            List<String[]> list = new ArrayList<>();
+
+            while (cursor.hasNext()) {
+                Document document = cursor.next();
+                if (!document.containsKey("path")) {
+                    continue;
+                }
+                list.add(new String[]{
+                        document.get("bucket").toString(),
+                        document.get("path").toString()
+                });
             }
-            Box.Builder box = Box.newBuilder();
-            int x = (int) document.get("x");
-            int y = (int) document.get("y");
-            int w = (int) document.get("w");
-            int h = (int) document.get("h");
-            double score = (double) document.get("score");
-            box.setX(x);
-            box.setY(y);
-            box.setW(w);
-            box.setH(h);
-            box.setScore((float) score);
-            return box.build();
-        };
+            //return the closest to center
+            return list.get(list.size() / 2);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return new String[2];
+        }
+
     }
 
+    public Set<Integer> findTrackID(String camId, long start, long end){
+
+        //get Collection
+        MongoCollection collection = database.getCollection(appfileConfig.trackCollection);
+
+        //query
+        FindIterable<Document> findIterable = collection.find(Filters.and(
+                Filters.eq("camId", camId),
+                Filters.gte("time", start),
+                Filters.lte("time", end)
+        ));
+
+        MongoCursor<Document> cursor = findIterable.iterator();
+        Set<Integer> list_trackId = new HashSet<>();
+
+        //get list trackId
+        while (cursor.hasNext()){
+            Document document = cursor.next();
+            if (!document.containsKey("boxes")){
+                continue;
+            }
+
+            List<List> boxes = (List<List>) document.get("boxes");
+            list_trackId.addAll(boxes.stream().map(box -> (int) box.get(4)).collect(Collectors.toList()));
+        }
+        return list_trackId;
+
+    }
+
+    /**
+     * Convert x1y1x2y2 to xywh format
+     * @param x1
+     * @param y1
+     * @param x2
+     * @param y2
+     * @return
+     */
+    private int[] x1y1x2y2_to_xywh(int x1, int y1, int x2, int y2){
+        return (new int[]{
+                (x2+x1)/2,
+                (y2+y1)/2,
+                x2-x1,
+                y2-y1
+        });
+    }
+
+    /**
+     * Convert list (from mongo) to box response
+     * @param box_value
+     * @return
+     */
+    private Box ListToBox(List box_value){
+        Box.Builder box = Box.newBuilder();
+        //convert to xywh
+        int[] xywh = x1y1x2y2_to_xywh((int) box_value.get(0), (int) box_value.get(1), (int) box_value.get(2), (int) box_value.get(3));
+
+        box.setX(xywh[0]);
+        box.setY(xywh[1]);
+        box.setW(xywh[2]);
+        box.setH(xywh[3]);
+        box.setScore(0);
+        return box.build();
+    }
+
+    /**
+     * Convert document (from mongo) to box response
+     * @param document
+     * @return
+     */
+    private Box DocumentToBox(Document document){
+        Box.Builder box = Box.newBuilder();
+        //get box
+        List box_value = (List) document;
+        //convert to xywh
+        int[] xywh = x1y1x2y2_to_xywh((int) box_value.get(0), (int) box_value.get(1), (int) box_value.get(2), (int) box_value.get(3));
+
+        box.setX(xywh[0]);
+        box.setY(xywh[1]);
+        box.setW(xywh[2]);
+        box.setH(xywh[3]);
+        box.setScore(0);
+        return box.build();
+    }
+
+    private Function<Document, Box> convertDocumentToBox() {
+        return document -> DocumentToBox(document);
+    }
 
 
 }
